@@ -4,3 +4,6 @@
 - name: restart nginx
   service: name=nginx state=restarted
 
+- name: reload nginx
+  service: name=nginx state=reloaded
+
